Create and retrieve specific books APIs
